--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h1 {
 }
 
 h2 {
-	font-size: 40px;
+	font-size: 35px;
 	line-height: 38px;
 	font-weight: 600;
 	font-family: 'Merriweather', serif;
@@ -205,6 +205,9 @@ a:hover{
 	overflow:hidden;
 	padding:20px 0px 30px 0px;
 }
+.separetor.invert{
+	filter: invert(100%);
+}
 .scrolldown {
 	padding-top: 24px;
 }
@@ -290,7 +293,7 @@ a:hover{
     padding: 10px;
 }
 
-.main_menu_bg .navbar-nav>li>a{
+.main_menu_bg .navbar-nav>li>a, .main_menu_bg .navbar-nav>li>.dropdown{
 	padding-top:10px;
 	padding-bottom:10px;
 	color: #000;
@@ -299,6 +302,58 @@ a:hover{
     font-family: 'Amatic SC', cursive;
 }
 
+.main_menu_bg .navbar-nav>li>.dropdown{
+  position: relative;
+  display: inline-block;
+  padding:0 15px;
+  background: transparent;
+  cursor: default;
+}
+
+
+.main_menu_bg .navbar-nav>li>.dropdown.active{
+	border: 1px solid #666;
+}
+
+.main_menu_bg .navbar-nav>li>.dropdown .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+    z-index: 1;
+    left: -25%;
+    text-align: center;
+    animation: dropdwon 0.5s;
+    top: unset;
+}
+
+.main_menu_bg .navbar-nav>li>.dropdown .menu-scroll {
+    animation: none !important;
+    height: unset;
+}
+
+.main_menu_bg .navbar-nav>li>.dropdown .dropdown-content a{
+	color: #000;
+	font-size: 25px;
+}
+
+.main_menu_bg .navbar-nav>li>.dropdown .dropdown-content a:hover {
+	color: #3c3c3c;
+}
+
+.main_menu_bg .navbar-nav>li>.dropdown:hover .dropdown-content {
+	display: block;
+} 
+
+@keyframes dropdwon {
+  from {bottom: -110px}
+  to {bottom: -85px}
+}
+
+@keyframes dropdwonscroll {
+  from {bottom: -130px}
+  to {bottom: -105px}
+}
 
 
 /* Banner section */
@@ -308,7 +363,20 @@ a:hover{
 	position:relative;
 	background-size:cover;
 	background-position-y: -85px;
-        height: 100vh;
+    height: 100vh;
+}
+
+/*.banner.menu{
+    background-position-y: 50%;
+    height: 48vh;
+}*/
+
+.banner.menu{
+    height: 100vh;
+    position: fixed;
+    width: 100%;
+   opacity: .43;
+    transform: rotate(180deg);
 }
 
 .main_banner_area{
@@ -418,6 +486,20 @@ a:hover{
 	text-align:center;
 	font-family: 'Shadows Into Light Two', cursive;
 }
+.single_abouts.xs p{
+	font-size:25px;
+}
+.main_servicos li{
+	font-family: 'Patrick Hand', cursive;
+    font-size: 17px;
+    margin-bottom: 15px;
+    color:#000;
+}
+.main_servicos li .check{
+	width: 25px;
+    margin-right: 10px;
+}
+
 .signature_img{}
 
 
