--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body {
     width: 100%;
 }
 
-.rodape_viviano{ 
+.rodape_viviano{
+    padding: 10px 20px 0 20px;	
 	text-align: center;
     float: left;
     width: 100%;
