--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ body {
     position: absolute;
 }
 
+.rodape_viviano.inside{
+    bottom: 0;
+    position: absolute;
+}
+
 .rodape p{
     font-size: 12px; 
     font-family: 'Merriweather', serif;
