Sincronização do projeto

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .rodape{
-	padding: 10px 20px 0 20px;https://www.facebook.com/photo.php?fbid=2194407857306515&set=pcb.2731808766847110&type=3&theater#
+	padding: 10px 20px 0 20px;
     background: #EFEFEF;
     text-align: right;
     float: left;
